--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "homepage": "https://github.com/WangChiech/realworld-nuxt#readme",
   "dependencies": {
+    "axios": "^0.25.0",
+    "dayjs": "^1.10.7",
+    "js-cookie": "^3.0.1",
     "nuxt": "^2.15.8"
   }
 }
