--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.25.0",
     "dayjs": "^1.10.7",
     "js-cookie": "^3.0.1",
+    "markdown-it": "^12.3.2",
     "nuxt": "^2.15.8"
   }
 }
