--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/WangChiech/realworld-nuxt#readme",
   "dependencies": {
     "axios": "^0.25.0",
+    "cookieparser": "^0.1.0",
     "dayjs": "^1.10.7",
     "js-cookie": "^3.0.1",
     "markdown-it": "^12.3.2",
